# Nand2Tetris

./: README.md
nand2tetris/: change.sh
nand2tetris/projects/1/: And.hdl  And16.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not.hdl  Not16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl  todos.md
nand2tetris/projects/10-11/: 第11章阅读笔记.md
nand2tetris/projects/10-11/Jack_Analyzer/: CMakeLists.txt  README.md  test_result.txt  tokenizer_test.sh  第11章阅读笔记.md
nand2tetris/projects/10-11/Jack_Analyzer/include/: CodeGen.h  CompilationEngine.h  JackTokenizer.h  SymbolTable.h  VMWriter.h  common.h
nand2tetris/projects/10-11/Jack_Analyzer/output/Compiler/Average/: Main.vm  Main.vmdiff
nand2tetris/projects/10-11/Jack_Analyzer/output/Compiler/ComplexArrays/: Main.vm  Main.xml
nand2tetris/projects/10-11/Jack_Analyzer/output/Compiler/ConvertToBin/: Main.vm
nand2tetris/projects/10-11/Jack_Analyzer/output/Compiler/Pong/: Ball.vm  Bat.vm  Bat.vmdiff  PongGame.vm
nand2tetris/projects/10-11/Jack_Analyzer/output/Compiler/Square/: Square.vm  SquareGame.vm
nand2tetris/projects/10-11/Jack_Analyzer/src/: CodeGen.cpp  CodeGen.h  CompilationEngine.cpp  JackTokenizer.cpp  SymbolTable.cpp  VMWriter.cpp  common.cpp  main.cpp
nand2tetris/projects/10-11/Jack_Analyzer/test/Compiler/Seven/: Main.jack
nand2tetris/projects/10/Jack_Analyzer/: README.md
nand2tetris/projects/12/: Array.jack  Math.jack  README.md  Screen.jack  String.jack  prepare_test.sh
nand2tetris/projects/12/ArrayTest/: ArrayTest.tst
nand2tetris/projects/12/KeyboardTest/: Keyboard.jack  Keyboard.vm
nand2tetris/projects/12/MathTest/: Math.jack  Math.vm  MathTest.out  MathTest.tst
nand2tetris/projects/12/MemoryTest/: Memory.jack
nand2tetris/projects/12/OS/: Array.jack  Keyboard.jack  Math.jack  Memory.jack  Output.jack  Screen.jack  String.jack  Sys.jack
nand2tetris/projects/12/OutputTest/: Output.jack  Output.vm
nand2tetris/projects/12/ScreenTest/: Screen.jack  Screen.vm
nand2tetris/projects/12/StringTest/: String.jack
nand2tetris/projects/12/SysTest/: Sys.jack
nand2tetris/projects/2/: ALU.hdl  Add16.hdl  FullAdder.hdl  HalfAdder.hdl  Inc16.hdl  todos.md
nand2tetris/projects/3/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl  Register.hdl  todos.md
nand2tetris/projects/3/b/: RAM16K.hdl  RAM16K.out  RAM4K.hdl  RAM512.hdl  todos.md
nand2tetris/projects/4/fill/: Fill.asm  fill.md
nand2tetris/projects/4/mult/: Mult.asm  Mult.md
nand2tetris/projects/5/: CPU.hdl  Computer.hdl  Memory.hdl  todo.md
nand2tetris/projects/6/: Todo.md
nand2tetris/projects/6/assembler/: CMakeLists.txt  README.md
nand2tetris/projects/6/assembler/include/: codegen.hh  parser.hh  symbol_table.hh
nand2tetris/projects/6/assembler/src/: codegen.cpp  main.cpp  parser.cpp  symbol_table.cpp
nand2tetris/projects/6/src/: codegen.cc  codegen.hh  main.cpp  parser.cpp  parser.hh  run_tests  symbol_table.cc  symbol_table.hh
nand2tetris/projects/7/translator/: CMakeLists.txt  README.md
nand2tetris/projects/7/translator/include/: CodeWriter.hh  Parser.hh  common.h
nand2tetris/projects/7/translator/output/: output.asm
nand2tetris/projects/7/translator/src/: CodeWriter.cpp  Parser.cpp  main.cpp
nand2tetris/projects/9/Tetris/: Main.jack
(+23 files in other folders)
